--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -12,7 +12,7 @@
 
 body {
     margin: 0;
-    background-color: rgba(0.0, 0.0, 0.0, 0.8);
+    background-color: rgb(50,50,50);
     color: white;
 }
 
