--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -14,6 +14,8 @@ body {
     margin: 0;
     background-color: rgb(50,50,50);
     color: white;
+    background-image: radial-gradient(circle at center, rgb(37, 37, 37) 0%, rgb(8, 8, 8) 100%);
+    background-attachment: fixed;
 }
 
 navbar {
@@ -100,5 +102,4 @@ titlebar video {
 
 contentarea {
     display: block;
-    height: 3000px;
 }
