--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -10,6 +10,10 @@
     font-style: normal;
 }
 
+* {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     background-color: rgb(50,50,50);
