--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -19,6 +19,7 @@ body {
     margin: 0;
     background-color: rgb(50,50,50);
     color: white;
+    font-size: 16px;
 }
 
 navbar {
@@ -103,12 +104,12 @@ videobarcontentbox {
 videobar-title {
     display: block;
     margin-bottom: 0.2em;
-    font-size: xxx-large;
+    font-size: 48px;
 }
 
 videobar-subtitle {
     display: block;
-    font-size: x-large;
+    font-size: 24px;
 }
 
 .centered {
