--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -17,7 +17,7 @@
 
 body {
     margin: 0;
-    background-color: rgb(50,50,50);
+    background-color: rgb(3%,3%,3%);
     color: white;
     font-size: 16px;
 }
@@ -104,7 +104,7 @@ videobarcontentbox {
 videobar-title {
     display: block;
     margin-bottom: 0.2em;
-    font-size: 48px;
+    font-size: 56px;
 }
 
 videobar-subtitle {
@@ -133,25 +133,78 @@ body-content {
     height: 100%;
 }
 
-body-content-section {
+body-content-block {
     display: block;
+    position: relative;
     width: 100%;
     height: 500px;
-    padding: 20px;
+    color: hsl(0, 0%, 100%);
 }
 
 .content-gradient-black-left {
-    background-image: linear-gradient(to left, rgb(3%,3%,3%) 0%, rgb(20%,20%,20%) 100%);
+    background-image: linear-gradient(to left, hsla(0, 0%, 20%, 50%) 0%, hsla(0, 0%, 20%, 100%) 50%);
 }
 
 .content-gradient-black-right {
-    background-image: linear-gradient(to right, rgb(3%,3%,3%) 0%, rgb(20%,20%,20%) 100%);
+    background-image: linear-gradient(to right, hsla(0, 0%, 20%, 50%) 0%, hsla(0, 0%, 20%, 100%) 50%);
 }
 
 .content-gradient-blue-left {
-    background-image: linear-gradient(to left, hsl(239, 50%, 5%) 0%, hsl(239, 50%, 20%) 100%);
+    background-image: linear-gradient(to left, hsla(239, 50%, 20%, 50%) 0%, hsla(239, 50%, 20%, 100%) 50%);
 }
 
 .content-gradient-blue-right {
-    background-image: linear-gradient(to right, hsl(239, 50%, 5%) 0%, hsl(239, 50%, 20%) 100%);
+    background-image: linear-gradient(to right, hsla(239, 50%, 20%, 50%) 0%, hsla(239, 50%, 20%, 100%) 50%);
+}
+
+.content-gradient-white-left {
+    background-image: linear-gradient(to left, hsla(0, 0%, 80%, 50%) 0%, hsla(0, 0%, 80%, 100%) 100%);
+}
+
+.content-gradient-white-right {
+    background-image: linear-gradient(to right, hsla(0, 0%, 80%, 50%) 0%, hsla(0, 0%, 80%, 100%) 100%);
+}
+
+body-content-image {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    z-index: 1;
+}
+
+body-content-text-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    z-index: 2;
+}
+
+.body-content-text-container-left {
+    padding-left: 5%;
+    padding-right: 25%;
+    text-align: left;
+}
+
+.body-content-text-container-right {
+    padding-left: 25%;
+    padding-right: 5%;
+    text-align: right;
+}
+
+body-content-text-title {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+body-content-text-paragraph {
+    font-size: 24px;
+    margin-bottom: 12px;
+}
+
+.body-content-font-invert {
+    color:hsl(0, 0%, 0%);
 }
