--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -29,6 +29,8 @@ navbar {
     z-index: 99;
     width: 100%;
     background-image: radial-gradient(ellipse at center bottom, rgb(15%,15%,15%) 0%, rgb(3%,3%,3%) 100%);
+    --min-height: 50;
+    --max-height: 100;
 }
 
 navbar-row {
@@ -85,6 +87,8 @@ videobar {
     width: 100%;
     background-color: black;
     z-index: 99;
+    --min-height: 56;
+    --max-height: 240;
 }
 
 .videobarheight {
@@ -104,17 +108,22 @@ videobarcontentbox {
     text-align: center;
     vertical-align: middle;
     background: transparent;
+    padding: 0 5%;
 }
 
 videobar-title {
     display: block;
     margin-bottom: 0.2em;
     font-size: 36px;
+    --min-font-size: 18;
+    --max-font-size: 36;
 }
 
 videobar-subtitle {
     display: block;
     font-size: 18px;
+    --min-font-size: 12;
+    --max-font-size: 18;
 }
 
 .centered {
@@ -226,7 +235,27 @@ body-content-text-paragraph {
 
 /* Small PC screens */
 @media only screen and (min-width: 769px) {
+    navbar {
+        --min-height: 50;
+        --max-height: 100;
+    }
 
+    videobar {
+        --min-height: 100;
+        --max-height: 480;
+    }
+
+    videobar-title {
+        font-size: 56px;
+        --min-font-size: 24;
+        --max-font-size: 56;
+    }
+
+    videobar-subtitle {
+        font-size: 24px;
+        --min-font-size: 16;
+        --max-font-size: 24;
+    }
 }
 
 /* Medium PC screens */
@@ -242,12 +271,26 @@ body-content-text-paragraph {
         font-size: 16px;
     }
 
+    navbar {
+        --min-height: 50;
+        --max-height: 100;
+    }
+
+    videobar {
+        --min-height: 100;
+        --max-height: 480;
+    }
+
     videobar-title {
         font-size: 56px;
+        --min-font-size: 24;
+        --max-font-size: 56;
     }
 
     videobar-subtitle {
         font-size: 24px;
+        --min-font-size: 16;
+        --max-font-size: 24;
     }
 
     navbar-dynamicbreak::before {
