--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -77,6 +77,7 @@ navbar-item {
 .navbar-dropdown-button {
     display: block;
     position: relative;
+    padding-right: 8px;
 }
 
 navbar-dropdown {
