--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -317,6 +317,7 @@ body-content-button {
     margin-top: 1.1em;
     padding: 1em;
     padding-left: 1.6em;
+    user-select: none;
 }
 
 body-content-button:hover {
