--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -219,35 +219,43 @@ body-content-block {
 }
 
 .content-gradient-black-left {
-    background-image: linear-gradient(to left, hsla(0, 0%, 10%, 50%) 0%, hsla(0, 0%, 10%, 100%) 50%);
+    background-image: linear-gradient(to left, hsla(0, 0%, 10%, 0%) 0%, hsla(0, 0%, 10%, 100%) 50%);
 }
 
 .content-gradient-black-right {
-    background-image: linear-gradient(to right, hsla(0, 0%, 10%, 50%) 0%, hsla(0, 0%, 10%, 100%) 50%);
+    background-image: linear-gradient(to right, hsla(0, 0%, 10%, 0%) 0%, hsla(0, 0%, 10%, 100%) 50%);
 }
 
 .content-gradient-grey-left {
-    background-image: linear-gradient(to left, hsla(0, 0%, 24%, 50%) 0%, hsla(0, 0%, 24%, 100%) 70%);
+    background-image: linear-gradient(to left, hsla(0, 0%, 24%, 0%) 0%, hsla(0, 0%, 24%, 100%) 70%);
 }
 
 .content-gradient-grey-right {
-    background-image: linear-gradient(to right, hsla(0, 0%, 24%, 50%) 0%, hsla(0, 0%, 24%, 100%) 70%);
+    background-image: linear-gradient(to right, hsla(0, 0%, 24%, 0%) 0%, hsla(0, 0%, 24%, 100%) 70%);
 }
 
 .content-gradient-blue-left {
-    background-image: linear-gradient(to left, hsla(239, 50%, 20%, 50%) 0%, hsla(239, 50%, 20%, 100%) 50%);
+    background-image: linear-gradient(to left, hsla(239, 30%, 20%, 0%) 0%, hsla(239, 30%, 20%, 100%) 50%);
 }
 
 .content-gradient-blue-right {
-    background-image: linear-gradient(to right, hsla(239, 50%, 20%, 50%) 0%, hsla(239, 50%, 20%, 100%) 50%);
+    background-image: linear-gradient(to right, hsla(239, 30%, 20%, 0%) 0%, hsla(239, 30%, 20%, 100%) 50%);
+}
+
+.content-gradient-green-left {
+    background-image: linear-gradient(to left, hsla(125, 20%, 20%, 0%) 0%, hsla(125, 20%, 20%, 100%) 50%);
+}
+
+.content-gradient-green-right {
+    background-image: linear-gradient(to right, hsla(125, 30%, 20%, 0%) 0%, hsla(125, 30%, 20%, 100%) 50%);
 }
 
 .content-gradient-white-left {
-    background-image: linear-gradient(to left, hsla(0, 0%, 80%, 50%) 0%, hsla(0, 0%, 80%, 100%) 100%);
+    background-image: linear-gradient(to left, hsla(0, 0%, 80%, 0%) 10%, hsla(0, 0%, 80%, 100%) 75%);
 }
 
 .content-gradient-white-right {
-    background-image: linear-gradient(to right, hsla(0, 0%, 80%, 50%) 0%, hsla(0, 0%, 80%, 100%) 100%);
+    background-image: linear-gradient(to right, hsla(0, 0%, 80%, 0%) 0%, hsla(0, 0%, 80%, 100%) 50%);
 }
 
 body-content-image {
@@ -293,7 +301,7 @@ body-content-text-paragraph {
 }
 
 .body-content-font-invert {
-    color:hsl(0, 0%, 0%);
+    color:hsl(0, 0%, 10%);
 }
 
 body-content-button-group {
@@ -318,6 +326,10 @@ body-content-button {
     padding: 1em;
     padding-left: 1.6em;
     user-select: none;
+}
+
+.body-content-button-invert {
+    border-color: hsl(0, 0%, 10%);
 }
 
 body-content-button:hover {
@@ -355,14 +367,15 @@ footer-company-info {
     display: block;
     float: left;
     height: 21px;
-    width: 32px;
-    margin: 4px;
+    width: 21px;
+    margin: 8px;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
 .social-link-github {
     background-image: url('/images/social/GitHub-Mark-Light-32px.png');
+    margin-left: 0;
 }
 
 .social-link-linkedin {
@@ -380,7 +393,7 @@ footer-company-info {
 }
 
 /* Small PC screens */
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 820px) {
     navbar {
         --min-height: 50;
         --max-height: 100;
@@ -406,7 +419,7 @@ footer-company-info {
     }
 
     navbar-item {
-        padding: 0 20px;
+        padding: 0 24px;
     }
 
     videobar {
@@ -458,6 +471,10 @@ footer-company-info {
         --max-height: 100;
     }
 
+    navbar-item {
+        padding: 0 28px;
+    }
+
     videobar {
         --min-height: 100;
         --max-height: 480;
@@ -483,11 +500,6 @@ footer-company-info {
         --max-font-size: 24;
     }
 
-    navbar-dynamicbreak::before {
-        content: " ";
-        white-space: unset;
-    }
-
     videobar-dynamicbreak::before {
         content: " ";
         white-space: unset;
@@ -511,6 +523,7 @@ footer-company-info {
 
     .footer-social-link {
         height: 24px;
-        margin: 8px;
+        width: 24px;
+        margin: 12px;
     }
 }
