--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -346,14 +346,6 @@ footer {
     background-color: hsl(0, 0%, 10%);
 }
 
-/*footer-company-info-container {
-    display: block;
-    position: relative;
-    float: right;
-    height: 44px;
-    width: 100px;
-}*/
-
 footer-company-info {
     position: absolute;
     top: 50%;
@@ -361,6 +353,7 @@ footer-company-info {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     margin-right: 30px;
+    text-align: right;
 }
 
 .footer-social-link {
@@ -467,15 +460,17 @@ footer-company-info {
     }
 
     navbar {
-        --min-height: 50;
-        --max-height: 100;
+        height: 120px;
+        --min-height: 75;
+        --max-height: 120;
     }
 
     navbar-item {
-        padding: 0 28px;
+        padding: 0 30px;
     }
 
     videobar {
+        top: 120px;
         --min-height: 100;
         --max-height: 480;
     }
@@ -506,7 +501,7 @@ footer-company-info {
     }
 
     body-container {
-        top: 580px;
+        top: 600px;
     }
 
     body-content-text-title {
