--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -22,6 +22,15 @@ body {
     font-size: 12px;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
 navbar {
     display: block;
     position: fixed;
