--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -267,6 +267,10 @@ body-content-block {
     background-image: linear-gradient(to right, hsla(0, 0%, 80%, 0%) 0%, hsla(0, 0%, 80%, 100%) 50%);
 }
 
+.content-gradient-white-right-mobileonly {
+    background-image: linear-gradient(to right, hsla(0, 0%, 80%, 0%) 0%, hsla(0, 0%, 80%, 50%) 50%);
+}
+
 body-content-image {
     position: absolute;
     height: 100%;
@@ -446,6 +450,10 @@ footer-company-text {
 
     .navbar-dropdown-button {
         display: none;
+    }
+
+    .content-gradient-white-right-mobileonly {
+        background-image: unset;
     }
 }
 
