--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -151,17 +151,17 @@ navbar-space {
 
 videobar {
     position: fixed;
-    top: 100px;
+    top: 0;
     display: block;
     width: 100%;
     background-color: black;
     z-index: 97;
     --min-height: 64;
-    --max-height: 240;
+    --max-height: 340;
 }
 
 .videobar-height {
-    height: 240px;
+    height: 340px;
 }
 
 videobar video {
@@ -174,7 +174,7 @@ videobar video {
 videobar-contentbox {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 90%;
     bottom: 0;
     text-align: center;
     vertical-align: middle;
@@ -473,11 +473,11 @@ footer-company-text {
 
     videobar {
         --min-height: 72;
-        --max-height: 360;
+        --max-height: 460;
     }
 
     .videobar-height {
-        height: 360px;
+        height: 460px;
     }
 
     videobar-title {
@@ -536,17 +536,12 @@ footer-company-text {
     }
 
     videobar {
-        top: 120px;
         --min-height: 100;
-        --max-height: 480;
+        --max-height: 580;
     }
 
     .videobar-height {
-        height: 480px;
-    }
-
-    videobar-contentbox {
-        height: 480px;
+        height: 580px;
     }
 
     videobar-title {
@@ -567,7 +562,7 @@ footer-company-text {
     }
 
     body-container {
-        top: 600px;
+        top: 580px;
     }
 
     body-content-text-title {
