--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -36,7 +36,7 @@ navbar {
     position: fixed;
     height: 100px;
     width: 100%;
-    z-index: 98;
+    z-index: 97;
     background-image: radial-gradient(ellipse at center bottom, rgb(15%,15%,15%) 0%, rgb(3%,3%,3%) 100%);
     --min-height: 55;
     --max-height: 100;
@@ -48,7 +48,7 @@ navbar-row {
     padding: 0 20px;
     display: block;
     position: relative;
-    z-index: 98;
+    z-index: 97;
 }
 
 navbar-item {
@@ -90,6 +90,17 @@ navbar-item {
 
 .navbar-item-current {
     background-color: hsla(0, 0%, 25%, 0.66);
+}
+
+navbar-dropdown-cancel-overlay {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+    z-index: 98;
 }
 
 navbar-dropdown {
@@ -155,7 +166,7 @@ videobar {
     display: block;
     width: 100%;
     background-color: black;
-    z-index: 97;
+    z-index: 96;
     --min-height: 64;
     --max-height: 340;
 }
@@ -232,7 +243,7 @@ body-content-block {
 }
 
 .content-gradient-home-glog {
-    background-image: linear-gradient(to right, hsla(0, 0%, 10%, 0%) 0%, hsla(0, 0%, 10%, 100%) 50%);
+    background-image: linear-gradient(to right, hsla(0, 0%, 0%, 0%) 0%, hsla(0, 0%, 0%, 100%) 50%);
 }
 
 .content-gradient-home-3dview {
