--- a/styles/cavalluzzi.css
+++ b/styles/cavalluzzi.css
@@ -15,8 +15,14 @@
     box-sizing: border-box;
 }
 
+html,
 body {
+    height: 100%;
     margin: 0;
+    padding: 0;
+}
+
+body {
     background-color: rgb(3%,3%,3%);
     color: white;
     font-size: 12px;
@@ -29,6 +35,16 @@ a {
 
 a:hover {
     cursor: pointer;
+}
+
+page-container {
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 navbar {
@@ -221,6 +237,9 @@ centered-text-container {
 body-container {
     position: relative;
     display: block;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+        flex: 1;
 }
 
 .body-container-videobar-offset {
@@ -463,6 +482,7 @@ contact-form-container textarea {
 
 footer {
     display: block;
+    position: relative;
     height: 100px;
     width: 100%;
     padding: 0 30px;
